03_infrastructure/identity/overlays/dev/ingressroute-patch-keycloak.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak
spec:
  routes:
    - match: Host(`keycloak-http.keycloak.svc`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
      middlewares:
        - name: redirect-https
    - match: Host(`keycloak.devmachine.local.xip.io`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
      middlewares:
        - name: redirect-https
    - match: Host(`keycloak.devmachine.local`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
      middlewares:
        - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-tls
spec:
  routes:
    - match: Host(`keycloak-http.keycloak.svc`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
    - match: Host(`keycloak.devmachine.local.xip.io`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
    - match: Host(`keycloak.devmachine.local`)
      kind: Rule
      services:
        - name: keycloak-http
          port: 80
